# prelegal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: pyproject.toml
backend/app/: auth.py  chat.py  database.py  deps.py  document_routes.py  documents.py  main.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_documents.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: auth-context.tsx  globals.css  layout.tsx  page.tsx
frontend/app/components/: AuthModal.tsx  MyDocumentsModal.tsx  SaveDocumentModal.tsx
scripts/: start-linux.sh  start-windows.ps1  stop-windows.ps1
templates/: LICENSE.txt
